<resources>
    <string name="app_name">dNomics</string>
    <string name="user">&#xf007; Usuario</string>
    <string name="password">&#xf13e; Password</string>
    <string name="registro">&#xf2b9; Registro</string>
    <string name="login">&#xf2f5; Iniciar</string>
    <string name="title_activity_registro">Registro</string>
    <string name="no_text"></string>
    <string name="nombre">&#xf2c2; Nombre</string>
    <string name="apellido">&#xf47f; Apellido</string>
    <string name="uniqueid">&#xf084; Unique ID</string>
    <string name="email">&#xf0e0; Email</string>
    <string name="birthDate">&#xf073; Fecha nacimiento</string>
    <string name="country">&#xf0ac; Pais</string>
    <string name="siguiente">&#xf0a4; Siguiente</string>
    <string name="guardar">&#xf0c7; Guardar</string>
    <string name="draftico">&#xf01c;</string>
    <string name="submittedico">&#xf0e0;</string>
    <string name="ticketico">&#xf1c5;</string>
    <string name="setingsico">&#xf0c9;</string>
    <string name="editprofile">Editar Perfil</string>
    <string name="newreport">Nuevo Reporte</string>
    <string name="lineitem">Nuevo Gasto</string>
    <string name="lineitemdate">&#xf073; Fecha</string>
    <string name="lineitemamt">&#xf0d6; Total</string>
    <string name="lineitemdescription">&#xf044; Detalle</string>
    <string name="lineitemfrom">&#xf1b9; Desde</string>
    <string name="lineitemto">&#xf1b9; Hasta</string>
    <string name="lineitemmerchant">&#xf07a; Marca/Vendedor</string>
    <string name="lineitemallocation">&#xf09d; Cuenta</string>
    <string name="lineitemattach">&#xf0c6; Ticket</string>
    <string name="reportname">&#xf15b; Nombre del Reporte</string>
    <string name="date">&#xf133; Fecha</string>
    <string name="location">&#xf3c5; Lugar</string>
    <string name="owned">Owned</string>
    <string name="draft">Draft</string>
    <string name="submitted">Debt</string>
    <string name="ticket">Reporte desde ticket</string>
    <string name="setings">Setings</string>
    <string name="showMessageAtention">¡Atención!</string>
    <string name="emptyField">Alguno o todos los campos están vacíos, por favor, ingresa un valor para continuar. \nGracias.</string>
    <string name="emailRegistered">El email ingresado ya esta registrado, por favor, ingresa otro email para continuar o puedes recuperar tu contraseña desde la pantalla de inicio. \nGracias.</string>
    <string name="emailFormat">El email ingresado no es valido, por favor, ingresa un email valido para continuar. \nGracias.</string>
    <string name="userRegistered">El usuario ingresado ya esta registrado, por favor, ingresa otro usuario para continuar. \nGracias.</string>
    <string name="userNotRegistered">El usuario ingresado no esta registrado, por favor, ingresa otro usuario para continuar. \nGracias.</string>
    <string name="Dashboard">Dashboard</string>


    <string-array name="registro_country">
        <item name="AS01">Afganistán</item>
        <item name="EU01">Albania</item>
        <item name="EU02">Alemania</item>
        <item name="EU03">Andorra</item>
        <item name="AF01">Angola</item>
        <item name="NA01">Anguila</item>
        <item name="AN">Antártida</item>
        <item name="NA02">Antigua y Barbuda</item>
        <item name="AS02">Arabia Saudita</item>
        <item name="AF">Argelia</item>
        <item name="SA">Argentina</item>
        <item name="AS03">Armenia</item>
        <item name="NA03">Aruba</item>
        <item name="OC">Australia</item>
        <item name="EU">Austria</item>
        <item name="AS04">Azerbaiyán</item>
        <item name="NA04">Bahamas</item>
        <item name="AS05">Bangladés</item>
        <item name="NA05">Barbados</item>
        <item name="AS06">Baréin</item>
    </string-array>
</resources>
