<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.markf.dnomics.Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDarkActionBar">

                <TextView
                    android:id="@+id/activityTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="30px"
                    android:text="@string/title_activity_registro"
                    android:textColor="@color/colorTitle"
                    android:textSize="@dimen/action_title" />
            </android.support.design.widget.AppBarLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:theme="@style/ActionBar"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:layout_marginTop="100px">

            <TextView
                android:id="@+id/lblUserRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user" />

            <EditText
                android:id="@+id/txtUsuarioRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/no_text" />

            <TextView
                android:id="@+id/lblPasswordRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/password" />

            <EditText
                android:id="@+id/txtPasswordRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/lblNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/txtNombreRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/no_text" />

            <TextView
                android:id="@+id/lblSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/apellido" />

            <EditText
                android:id="@+id/txtApellidoRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/no_text" />

            <TextView
                android:id="@+id/lblUniqueID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/uniqueid" />

            <EditText
                android:id="@+id/txtUniqueRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/no_text" />

            <TextView
                android:id="@+id/lblEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/email" />

            <EditText
                android:id="@+id/txtEmailRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btnNextRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorControlNormalActionBar"
                android:text="@string/siguiente"
                android:textColor="@color/colorControlNormal" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>
