<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context="com.example.markf.dnomics.LineItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDarkActionBar">

                <TextView
                    android:id="@+id/LineItemActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="30px"
                    android:text="@string/lineitem"
                    android:textColor="@color/colorTitle"
                    android:textSize="@dimen/action_title" />
            </android.support.design.widget.AppBarLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LineItemContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:orientation="vertical"
            android:theme="@style/ActionBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/lineitem2"
                    />
            </LinearLayout>


            <TextView
                android:id="@+id/lblLineItemDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/lineitemdate" />

            <DatePicker
                android:id="@+id/lineItemDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                />

            <TextView
                android:id="@+id/lblLineItemAmt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/lineitemamt" />

            <EditText
                android:id="@+id/txtLineItemAmt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:ems="10"
                android:text="@string/no_text" />

            <TextView
                android:id="@+id/lblLineItemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/lineitemdescription" />

            <EditText
                android:id="@+id/txtLineItemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:ems="10"
                android:text="@string/no_text" />

            <TextView
                android:id="@+id/lblLineItemFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/lineitemfrom" />

            <EditText
                android:id="@+id/txtLineItemFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:ems="10"
                android:text="@string/no_text" />

            <TextView
                android:id="@+id/lblLineItemTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/lineitemto" />

            <EditText
                android:id="@+id/txtLineItemTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:ems="10"
                android:text="@string/no_text" />

            <TextView
                android:id="@+id/lblLineItemMerchant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/lineitemmerchant" />

            <EditText
                android:id="@+id/txtLineItemMerchant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:ems="10"
                android:text="@string/no_text" />

            <TextView
                android:id="@+id/lblLineItemAllocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/lineitemallocation" />

            <EditText
                android:id="@+id/txtLineItemAllocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:ems="10"
                android:text="@string/no_text" />

            <Button
                android:id="@+id/btnAttachTicket"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimaryDarkActionBar"
                android:text="@string/lineitemattach"
                android:textColor="@color/colorControlNormal" />

            <Button
                android:id="@+id/btnSaveLineItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorControlNormalActionBar"
                android:text="@string/guardar"
                android:textColor="@color/colorControlNormal" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>
