<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.markf.dnomics.EditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDarkActionBar">

                <TextView
                    android:id="@+id/EditProfileActivityTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="30px"
                    android:text="@string/editprofile"
                    android:textColor="@color/colorTitle"
                    android:textSize="@dimen/action_title" />
            </android.support.design.widget.AppBarLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/EditProfileAContainer"
            android:layout_width="match_parent"
            android:layout_height="547dp"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:layout_marginTop="50px"
            android:orientation="vertical"
            android:theme="@style/ActionBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/camera1"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/lblUserEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/user" />

            <EditText
                android:id="@+id/txtUsuarioEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/no_text" />

            <TextView
                android:id="@+id/lblPasswordEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/password" />

            <EditText
                android:id="@+id/txtPasswordEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/lblNombreEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/txtNombreEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="100"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/no_text" />

            <TextView
                android:id="@+id/lblSurnameEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/apellido" />

            <EditText
                android:id="@+id/txtApellidoEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="100"
                android:inputType="textPersonName"
                android:text="@string/no_text" />

            <TextView
                android:id="@+id/lblUniqueIDEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30px"
                android:text="@string/uniqueid" />

            <EditText
                android:id="@+id/txtUniqueEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="5"
                android:inputType="textPersonName"
                android:text="@string/no_text" />

            <Button
                android:id="@+id/btnUpdateEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorControlNormalActionBar"
                android:text="@string/guardar"
                android:textColor="@color/colorControlNormal" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>
